--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@
   hr {
     height: 0;
     color: inherit;
-    border-top-width: 1px;
+    x border-top-width: 1px;
   }
 
   abbr:where([title]) {
